--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@nestjs/mapped-types": "*",
     "@nestjs/platform-express": "^10.0.0",
     "basic-auth": "^2.0.1",
+    "dotenv": "^16.4.7",
     "http-proxy": "^1.18.1",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1"
